kubernetes/apps/services/invidious/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Invidious"
    hajimari.io/group: "Services"
    hajimari.io/icon: "youtube"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "youtube.${SECRET_DOMAIN}"
      secretName: "youtube.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: youtube.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious-server
                port:
                  number: 3000
